# Biblio-Brain

./: BiblioBrain.cpp  README.md  d  develop  m.cpp.txt
Biblio Brain Project/: CMakeLists.txt  ChatGPT.html  main.cpp
Biblio Brain Project/ChatGPT_files/: js  saved_resource.html
Biblio Brain Project/app/controllers/: AuthController.cpp  AuthController.h  BookController.cpp  BookController.h  BorrowController.cpp  BorrowController.h  UserController.cpp  UserController.h
Biblio Brain Project/app/models/: Book.cpp  Book.h  Borrow.cpp  Borrow.h  User.cpp  User.h
Biblio Brain Project/app/services/: AuthService.cpp  AuthService.h  Data service.cpp  DateService.cpp  DateService.h  PasswordHasher.cpp  PasswordHasher.h
Biblio Brain Project/core/: BaseController.hpp  BaseModel.hpp  Response.hpp
Biblio Brain Project/storage/: borrows.json  users.json
